--- a/tutorialstyle.css
+++ b/tutorialstyle.css
@@ -1,3 +1,4 @@
+/*This is css for the embled video in tutorial page to make it responsive with the page*/
 .iframe-pot{
   position: relative;
   width: 100%;
